several layout changes. about me / contact page reworked

--- a/public/main.css
+++ b/public/main.css
@@ -71,6 +71,7 @@ a:hover {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   width: 100%;
   box-sizing: border-box;
+  display: block;
 }
 #dropdown a:last-child {
   border-bottom: none;
